--- a/src/detailsite.html
+++ b/src/detailsite.html
@@ -580,14 +580,133 @@
                         <div class="lineUpSection__groupBox lineUpSection__groupBox--1  lead">A=f/m</div>
                     </div>
                 </div>
+
+
+                <div class="lineUpSection__video">
+                    <iframe
+                            src="https://www.youtube.com/embed/4HTG3Pt9VhQ" width="1440" height="392" frameborder="0">
+                    </iframe>
+                </div>
+
+
                 <!-- end of lineUpSection -->
             </div>
 
-            <div class="lineUpSection__video">
-                <iframe
-                        src="https://www.youtube.com/embed/4HTG3Pt9VhQ" width="1440" height="392" frameborder="0">
-                </iframe>
+
+            <!-- start with knowledgeSection -->
+            <div class="knowledgeSection">
+
+
+                <div class="knowledgeSection__content">
+                    <h1 class="knowledgeSection_title">Wissenswertes</h1>
+
+
+                    <p class="knowledgeSection__lead lead">
+                        Damit euer Festivalerlebnis glatt verläuft und ihr es in vollen Zügen geniesse könnt,
+                        gibt es hier nochmals eine Übersicht mit allem was ihr wissen und beachten müsst.
+                    </p>
+
+
+                    <div class="knowledgeSection__accordionContainer">
+
+                        <div class="knowledgeSection__accordionBox">
+                            <div class="knowledgeSection__titleContainer">
+                                <h2 class="knowledgeSection__title">Anreise & Rückreise</h2>
+                                <p class="knowledgeSection__choose btnTabsHeader ">Mehr</p>
+                            </div>
+                            <div class="knowledgeSection__lowerContainer">
+                                <p class="knowledgeSection__text">
+                                    Die Anreise ans Sur le Lac gestaltet sich wie folgt und ganz unkompliziert.
+                                    Wir empfehlen die öffentlichen Verkehrsmittel zu benützen.
+                                     Ab Eggersriet Post bringen euch Shuttlebusse direkt aufs
+                                    Naturverbundenen Besuchern legen wir den 15-minütigen Spaziergang vorbei an Blüten
+                                    und Blatt gen Festgelände sehr ans Herz. In der Nacht bringen euch dann stündlich
+                                    Spezialbusse sicher und behütet zurück nach St. Gallen. Die Spezialbusse sind im
+                                    Eintrittspreis inbegriffen. Besuchern, welche mit Privatautos anreisen,
+                                    stehen in begrenzter Anzahl Parkplätze unweit des Festgeländes zur Verfügung. 
+                                </p>
+                                <div class="knowledgeSection__option"></div>
+                            </div>
+
+
+                        </div>
+
+                        <div class="knowledgeSection__accordionBox">
+                            <div class="knowledgeSection__titleContainer">
+                                <h2 class="knowledgeSection__title">Anreise & Rückreise</h2>
+                                <p class="knowledgeSection__choose btnTabsHeader ">Mehr</p>
+                            </div>
+                            <div class="knowledgeSection__lowerContainer">
+                                <p class="knowledgeSection__text">
+                                    Die Anreise ans Sur le Lac gestaltet sich wie folgt und ganz unkompliziert.
+                                    Wir empfehlen die öffentlichen Verkehrsmittel zu benützen.
+                                     Ab Eggersriet Post bringen euch Shuttlebusse direkt aufs
+                                    Naturverbundenen Besuchern legen wir den 15-minütigen Spaziergang vorbei an Blüten
+                                    und Blatt gen Festgelände sehr ans Herz. In der Nacht bringen euch dann stündlich
+                                    Spezialbusse sicher und behütet zurück nach St. Gallen. Die Spezialbusse sind im
+                                    Eintrittspreis inbegriffen. Besuchern, welche mit Privatautos anreisen,
+                                    stehen in begrenzter Anzahl Parkplätze unweit des Festgeländes zur Verfügung. 
+                                </p>
+                                <div class="knowledgeSection__option"></div>
+                            </div>
+
+
+                        </div>
+
+                        <div class="knowledgeSection__accordionBox">
+                            <div class="knowledgeSection__titleContainer">
+                                <h2 class="knowledgeSection__title">Anreise & Rückreise</h2>
+                                <p class="knowledgeSection__choose btnTabsHeader ">Mehr</p>
+                            </div>
+                            <div class="knowledgeSection__lowerContainer">
+                                <p class="knowledgeSection__text">
+                                    Die Anreise ans Sur le Lac gestaltet sich wie folgt und ganz unkompliziert.
+                                    Wir empfehlen die öffentlichen Verkehrsmittel zu benützen.
+                                     Ab Eggersriet Post bringen euch Shuttlebusse direkt aufs
+                                    Naturverbundenen Besuchern legen wir den 15-minütigen Spaziergang vorbei an Blüten
+                                    und Blatt gen Festgelände sehr ans Herz. In der Nacht bringen euch dann stündlich
+                                    Spezialbusse sicher und behütet zurück nach St. Gallen. Die Spezialbusse sind im
+                                    Eintrittspreis inbegriffen. Besuchern, welche mit Privatautos anreisen,
+                                    stehen in begrenzter Anzahl Parkplätze unweit des Festgeländes zur Verfügung. 
+                                </p>
+                                <div class="knowledgeSection__option"></div>
+                            </div>
+
+
+                        </div>
+
+                        <div class="knowledgeSection__accordionBox">
+                            <div class="knowledgeSection__titleContainer">
+                                <h2 class="knowledgeSection__title">Anreise & Rückreise</h2>
+                                <p class="knowledgeSection__choose btnTabsHeader ">Mehr</p>
+                            </div>
+                            <div class="knowledgeSection__lowerContainer">
+                                <p class="knowledgeSection__text">
+                                    Die Anreise ans Sur le Lac gestaltet sich wie folgt und ganz unkompliziert.
+                                    Wir empfehlen die öffentlichen Verkehrsmittel zu benützen.
+                                     Ab Eggersriet Post bringen euch Shuttlebusse direkt aufs
+                                    Naturverbundenen Besuchern legen wir den 15-minütigen Spaziergang vorbei an Blüten
+                                    und Blatt gen Festgelände sehr ans Herz. In der Nacht bringen euch dann stündlich
+                                    Spezialbusse sicher und behütet zurück nach St. Gallen. Die Spezialbusse sind im
+                                    Eintrittspreis inbegriffen. Besuchern, welche mit Privatautos anreisen,
+                                    stehen in begrenzter Anzahl Parkplätze unweit des Festgeländes zur Verfügung. 
+                                </p>
+                                <div class="knowledgeSection__option"></div>
+                            </div>
+
+
+                        </div>
+
+                    </div>
+
+
+                </div>
+
+
+                <!-- end of knowledgeSection  -->
             </div>
+
+
             <!-- end of mainSection -->
         </main>
 
