--- a/src/detailsite.html
+++ b/src/detailsite.html
@@ -625,7 +625,33 @@
                                     Eintrittspreis inbegriffen. Besuchern, welche mit Privatautos anreisen,
                                     stehen in begrenzter Anzahl Parkplätze unweit des Festgeländes zur Verfügung. 
                                 </p>
-                                <div class="knowledgeSection__option"></div>
+                                <div class="knowledgeSection__option" id="map">
+
+                                    <script>
+
+                                        function initMap() {
+                                            // Map options
+                                            var options = {
+                                                zoom:8,
+                                                center:{lat:47.4250593,lng:9.3765878}
+                                            }
+
+                                            var map = new
+                                            google.maps.Map(document.getElementById('map'),options);
+
+                                            // Add marker
+                                            var marker = new google.maps.Marker({
+                                                position:{lat:47.4425183,lng:9.4704406},
+                                                map:map,
+                                                icon:'detail_place.svg'
+                                            });
+                                        }
+                                    </script>
+
+                                    <script defer
+                                            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDrzQCVf_Et09zdLPI8Y8gGHKBTP5cF4Go&callback=initMap">
+                                    </script>
+                                </div>
                             </div>
 
 
