set new css-grid attributes

--- a/src/detailsite.html
+++ b/src/detailsite.html
@@ -635,7 +635,7 @@
 
                         <div class="knowledgeSection__accordionBox">
                             <div class="knowledgeSection__titleContainer">
-                                <h2 class="knowledgeSection__title">Anreise & Rückreise</h2>
+                                <h2 class="knowledgeSection__title">Einlassregeln</h2>
                                 <p class="knowledgeSection__choose btnTabsHeader ">Mehr</p>
                             </div>
                             <div class="knowledgeSection__lowerContainer">
@@ -649,7 +649,7 @@
                                     Eintrittspreis inbegriffen. Besuchern, welche mit Privatautos anreisen,
                                     stehen in begrenzter Anzahl Parkplätze unweit des Festgeländes zur Verfügung. 
                                 </p>
-                                <div class="knowledgeSection__option"></div>
+
                             </div>
 
 
@@ -657,7 +657,7 @@
 
                         <div class="knowledgeSection__accordionBox">
                             <div class="knowledgeSection__titleContainer">
-                                <h2 class="knowledgeSection__title">Anreise & Rückreise</h2>
+                                <h2 class="knowledgeSection__title">Zelten & Naturschutz</h2>
                                 <p class="knowledgeSection__choose btnTabsHeader ">Mehr</p>
                             </div>
                             <div class="knowledgeSection__lowerContainer">
@@ -671,7 +671,7 @@
                                     Eintrittspreis inbegriffen. Besuchern, welche mit Privatautos anreisen,
                                     stehen in begrenzter Anzahl Parkplätze unweit des Festgeländes zur Verfügung. 
                                 </p>
-                                <div class="knowledgeSection__option"></div>
+
                             </div>
 
 
@@ -679,7 +679,7 @@
 
                         <div class="knowledgeSection__accordionBox">
                             <div class="knowledgeSection__titleContainer">
-                                <h2 class="knowledgeSection__title">Anreise & Rückreise</h2>
+                                <h2 class="knowledgeSection__title">Fragen & Antworten</h2>
                                 <p class="knowledgeSection__choose btnTabsHeader ">Mehr</p>
                             </div>
                             <div class="knowledgeSection__lowerContainer">
@@ -693,7 +693,7 @@
                                     Eintrittspreis inbegriffen. Besuchern, welche mit Privatautos anreisen,
                                     stehen in begrenzter Anzahl Parkplätze unweit des Festgeländes zur Verfügung. 
                                 </p>
-                                <div class="knowledgeSection__option"></div>
+
                             </div>
 
 
