teaserSection responive finished

--- a/src/detailsite.html
+++ b/src/detailsite.html
@@ -735,6 +735,51 @@
 
                 <div class="teaserSection__container2">
 
+                    <div class="teaserSection__boxA">
+                        <svg class="teaserSection__arrowPic teaserSection__arrowPic--left" height="24px" version="1.1" viewBox="0 0 24 24" width="24px"
+                             xmlns="http://www.w3.org/2000/svg"
+                             xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
+                            <title>navigation_backtotop</title>
+                            <desc>Created with Sketch.</desc>
+                            <defs></defs>
+                            <g fill="none" fill-rule="evenodd" id="Icons" stroke="none" stroke-width="1">
+                                <g class="teaserSection__arrowFill" fill="#000000"  transform="translate(-12.000000, -12.000000)">
+                                    <g id="Shape" transform="translate(12.000000, 12.000000)">
+                                        <path d="M23.7521515,11.4010327 L12.5989673,0.247848537 C12.454389,0.103270224 12.2271945,0 12,0 C11.7728055,0 11.545611,0.103270224 11.4010327,0.247848537 L0.247848537,11.4010327 C-0.082616179,11.7314974 -0.082616179,12.2685026 0.247848537,12.5989673 C0.413080895,12.7641997 0.619621343,12.8468158 0.846815835,12.8468158 C1.07401033,12.8468158 1.28055077,12.7641997 1.44578313,12.5989673 L11.1531842,2.89156627 L11.1531842,23.1531842 C11.1531842,23.6282272 11.524957,24 12,24 C12.475043,24 12.8468158,23.6282272 12.8468158,23.1531842 L12.8468158,2.89156627 L22.5542169,12.5989673 C22.8846816,12.929432 23.4216867,12.929432 23.7521515,12.5989673 C24.0826162,12.2685026 24.0619621,11.7314974 23.7521515,11.4010327 L23.7521515,11.4010327 Z"></path>
+                                    </g>
+                                </g>
+                            </g>
+                        </svg>
+                        <p class="teaserSection__text teaserSection__text--area1 btnTabsHeader ">Musikfestwochen</p>
+                        <div class="teaserSection__img teaserSection__img--left"></div>
+                    </div>
+
+                    <div class="teaserSection__boxB">
+                        <svg class="teaserSection__arrowPic teaserSection__arrowPic--right" height="24px" version="1.1" viewBox="0 0 24 24" width="24px"
+                             xmlns="http://www.w3.org/2000/svg"
+                             xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
+                            <title>navigation_backtotop</title>
+                            <desc>Created with Sketch.</desc>
+                            <defs></defs>
+                            <g fill="none" fill-rule="evenodd" id="Icons" stroke="none" stroke-width="1">
+                                <g class="teaserSection__arrowFill" fill="#000000"  transform="translate(-12.000000, -12.000000)">
+                                    <g id="Shape" transform="translate(12.000000, 12.000000)">
+                                        <path d="M23.7521515,11.4010327 L12.5989673,0.247848537 C12.454389,0.103270224 12.2271945,0 12,0 C11.7728055,0 11.545611,0.103270224 11.4010327,0.247848537 L0.247848537,11.4010327 C-0.082616179,11.7314974 -0.082616179,12.2685026 0.247848537,12.5989673 C0.413080895,12.7641997 0.619621343,12.8468158 0.846815835,12.8468158 C1.07401033,12.8468158 1.28055077,12.7641997 1.44578313,12.5989673 L11.1531842,2.89156627 L11.1531842,23.1531842 C11.1531842,23.6282272 11.524957,24 12,24 C12.475043,24 12.8468158,23.6282272 12.8468158,23.1531842 L12.8468158,2.89156627 L22.5542169,12.5989673 C22.8846816,12.929432 23.4216867,12.929432 23.7521515,12.5989673 C24.0826162,12.2685026 24.0619621,11.7314974 23.7521515,11.4010327 L23.7521515,11.4010327 Z"></path>
+                                    </g>
+                                </g>
+                            </g>
+                        </svg>
+                        <p class="teaserSection__text teaserSection__text--area2 btnTabsHeader ">Openair Zürich</p>
+                        <div class="teaserSection__img teaserSection__img--right"></div>
+
+                    </div>
+
+
+
+
+
                 </div>
 
 
