anchor link instead of button

--- a/src/detailsite.html
+++ b/src/detailsite.html
@@ -727,7 +727,9 @@
                         </g>
                     </svg>
                     <h1 class="teaserSection__title">Sei ein Teil von Sur Le Lac</h1>
-                    <button class="teaserSection__btn secondaryButton secondaryButton--white btnTabsHeader">TICKETS KAUFEN</button>
+                    <a  class="teaserSection__btn secondaryButton secondaryButton--white btnTabsHeader"
+                        href="ticket-order.html"><span>TICKETS KAUFEN</span>
+                    </a>
 
 
 
