add an if loop to the addEventListener

--- a/src/detailsite.html
+++ b/src/detailsite.html
@@ -918,6 +918,6 @@
 
 
 <script src="js/main.js"></script>
-<script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDrzQCVf_Et09zdLPI8Y8gGHKBTP5cF4Go&callback=initMap"></script>
+<script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDrzQCVf_Et09zdLPI8Y8gGHKBTP5cF4Go&callback=initMap&map_ids=2ab83db5f283fb46"></script>
 </body>
 </html>
