camping responsive finished

--- a/src/ticket-order.html
+++ b/src/ticket-order.html
@@ -451,7 +451,7 @@
                     </svg>
                     <p class="textSection__text textSection__text--2 copy">Fr, 13. - So, 15. Aug 2016</p>
                 </div>
-                <h2>Festivaleintritt</h2>
+                <h2 class="textSection__title  textSection__title__ticketOrder">Festivaleintritt</h2>
 
                 <!-- container--A -->
                 <div class="ticketChooseSection__container ticketChooseSection__container--A">
@@ -654,7 +654,7 @@
 
                 </div>
 
-                <h2>Camping</h2>
+                <h2 class="textSection__title__ticketOrder">Camping</h2>
                 <!--continer--B -->
                 <div class="ticketChooseSection__container ticketChooseSection__container--B">
                     <div class="ticketChooseSection__box ticketChooseSection__box--1">
