add button to buy ticket and border

--- a/src/ticket-order.html
+++ b/src/ticket-order.html
@@ -747,12 +747,11 @@
 
                         </div>
                     </div>
-
-
-
-
-
                 </div>
+
+                <div class="ticketChooseSection__border"></div>
+
+                <button class="ticketChooseSection__buyBtn primaryButton">4 TICKETS KAUFEN</button>
 
             </div>
 
