new position in the html structure for pic

--- a/src/index.html
+++ b/src/index.html
@@ -368,9 +368,9 @@
                     <button class="titleSection__btn titleSection__btn--result footerLabels">ERGEBNIS ANZEIGEN</button>
                 </div>
 
-                <img alt="festival picture" class="titleSection__img" src="images/Links/BigTeaser.png"
-                     title="festival picture">
             </div>
+            <img  class="titleSection__img" alt="festival picture" src="images/Links/BigTeaser.png"
+                 title="festival picture">
             <div class="magazinSection" id="magazinSection">
                 <h1 class="magazinSection__h1">Magazin</h1>
                 <div class="magazinSection__container">
