add a new font-size and margines

--- a/src/detailsite.html
+++ b/src/detailsite.html
@@ -615,7 +615,7 @@
                                 <p class="knowledgeSection__choose btnTabsHeader ">Mehr</p>
                             </div>
                             <div class="knowledgeSection__lowerContainer" id="lowerContainer">
-                                <p class="knowledgeSection__text">
+                                <p class="knowledgeSection__text copy">
                                     Die Anreise ans Sur le Lac gestaltet sich wie folgt und ganz unkompliziert.
                                     Wir empfehlen die öffentlichen Verkehrsmittel zu benützen.
                                      Ab Eggersriet Post bringen euch Shuttlebusse direkt aufs
@@ -639,7 +639,7 @@
                                 <p class="knowledgeSection__choose btnTabsHeader">Mehr</p>
                             </div>
                             <div class="knowledgeSection__lowerContainer">
-                                <p class="knowledgeSection__text">
+                                <p class="knowledgeSection__text copy">
                                     Die Anreise ans Sur le Lac gestaltet sich wie folgt und ganz unkompliziert.
                                     Wir empfehlen die öffentlichen Verkehrsmittel zu benützen.
                                      Ab Eggersriet Post bringen euch Shuttlebusse direkt aufs
@@ -661,7 +661,7 @@
                                 <p class="knowledgeSection__choose btnTabsHeader">Mehr</p>
                             </div>
                             <div class="knowledgeSection__lowerContainer">
-                                <p class="knowledgeSection__text">
+                                <p class="knowledgeSection__text copy">
                                     Die Anreise ans Sur le Lac gestaltet sich wie folgt und ganz unkompliziert.
                                     Wir empfehlen die öffentlichen Verkehrsmittel zu benützen.
                                      Ab Eggersriet Post bringen euch Shuttlebusse direkt aufs
@@ -683,7 +683,7 @@
                                 <p class="knowledgeSection__choose btnTabsHeader">Mehr</p>
                             </div>
                             <div class="knowledgeSection__lowerContainer">
-                                <p class="knowledgeSection__text">
+                                <p class="knowledgeSection__text copy">
                                     Die Anreise ans Sur le Lac gestaltet sich wie folgt und ganz unkompliziert.
                                     Wir empfehlen die öffentlichen Verkehrsmittel zu benützen.
                                      Ab Eggersriet Post bringen euch Shuttlebusse direkt aufs
