--- a/src/detailsite.html
+++ b/src/detailsite.html
@@ -512,10 +512,20 @@
 
                     </div>
 
-                    <div class="textSection__sliderContainer">slider
-
-
+                    <div class="carousel-container">
+                        <div class="carousel-slide">
+                            <img class="test" src="./images/slider/carousel5.jpg" id="lastClone" alt="">
+                            <img class="test" src="./images/slider/carousel1.jpg" alt="">
+                            <img class="test" src="./images/slider/carousel2.jpg" alt="">
+                            <img class="test" src="./images/slider/carousel3.jpg" alt="">
+                            <img class="test" src="./images/slider/carousel4.jpg" alt="">
+                            <img class="test" src="./images/slider/carousel5.jpg" alt="">
+                            <img class="test" src="./images/slider/carousel1.jpg" id="firstClone" alt="">
+                        </div>
                     </div>
+
+                    <button id="prevBtn">Prev</button>
+                    <button id="nextBtn">Next</button>
 
 
                 </div>
