refactor the showMeMore function for magazineSection

--- a/src/index.html
+++ b/src/index.html
@@ -378,70 +378,51 @@
 
                 <div class="magazineSection__container">
 
-                    <div class="magazineSection__box magazineSection__box--A">
-                        <h2 class="magazineSection__Title">Einfach bloss nichts vergessen</h2>
-                        <p class="magazineSection__text">
+                    <div class="magazineSection__box">
+                        <div class="magazineSection__upper">
+                            <h2 class="magazineSection__Title">Einfach bloss nichts vergessen</h2>
+                            <button class="magazineSection__btn btnTabsHeader">LESEN</button>
+                        </div>
+                        <p class="magazineSection__lower">
                             Zelt, Schlafsack, Isomatte vergessen: 3 Tage wach! Regenjacke, Mütze,
                             Handtuch: 3 Tage nass! Zahnbürste, Deo, Socken: 3 Tage baah! Es geht auch anders.
                             Der Festivalguide Check gegen Alzheimer und Co.
                         </p>
-                        <button class="magazineSection__btn btnTabsHeader">LESEN</button>
                     </div>
 
                     <div class="magazineSection__box">
-                        <h2 class="magazineSection__Title">Wie soll ich mich bei Gewitter verhalten?</h2>
-                        <p class="magazineSection__text">
-                            Die Sturm- und Gewitterwarnungen auf Festivals nehmen zu. Blitzeinschläge führen immer
-                            wieder zu zahlreichen Verletzten. Da wir nicht davon ausgehen können,
-                            dass sich diese Entwicklung wieder umkehrt
-                            , müssen wir damit rechnen, dass Festivals immer wieder davon betroffen sein werden.
-                            Was sollte man also beachten?
+                        <div class="magazineSection__upper">
+                            <h2 class="magazineSection__Title">Einfach bloss nichts vergessen</h2>
+                            <button class="magazineSection__btn btnTabsHeader">LESEN</button>
+                        </div>
+                        <p class="magazineSection__lower">
+                            Zelt, Schlafsack, Isomatte vergessen: 3 Tage wach! Regenjacke, Mütze,
+                            Handtuch: 3 Tage nass! Zahnbürste, Deo, Socken: 3 Tage baah! Es geht auch anders.
+                            Der Festivalguide Check gegen Alzheimer und Co.
                         </p>
-                        <button class="magazineSection__btn btnTabsHeader">LESEN</button>
                     </div>
-
                     <div class="magazineSection__box">
-                        <h2 class="magazineSection__Title">7 Life Hacks für den Festivalbesuch</h2>
-                        <p class="magazineSection__text">
-                            Mit diesen Tricks macht ihr euch das Campen auf dem Festival noch leichter.
-                            Es gibt viele kreative Lösungen mit Einmalseife, Klopapierspender,
-                            Grillanzünder, Kaffebeutel und Strohhalmen.
+                        <div class="magazineSection__upper">
+                            <h2 class="magazineSection__Title">Einfach bloss nichts vergessen</h2>
+                            <button class="magazineSection__btn btnTabsHeader">LESEN</button>
+                        </div>
+                        <p class="magazineSection__lower">
+                            Zelt, Schlafsack, Isomatte vergessen: 3 Tage wach! Regenjacke, Mütze,
+                            Handtuch: 3 Tage nass! Zahnbürste, Deo, Socken: 3 Tage baah! Es geht auch anders.
+                            Der Festivalguide Check gegen Alzheimer und Co.
                         </p>
-                        <button class="magazineSection__btn btnTabsHeader">LESEN</button>
                     </div>
-
                     <div class="magazineSection__box">
-                        <h2 class="magazineSection__Title">Erste Hilfe und die Reiseapotheke</h2>
-                        <p class="magazineSection__text">
-                            Was der Arzt rät: Sonnenstich, Kater, Fuss umgeknickt … Festivals stecken voller
-                            versteckten Gefahren. Wir haben unseren Hausarzt angerufen und gefragt,
-                            was man unbedingt bedenken und beachten sollte damit man wieder gesund
-                            und munter vom Festival nach Hause kommt.
+                        <div class="magazineSection__upper">
+                            <h2 class="magazineSection__Title">Einfach bloss nichts vergessen</h2>
+                            <button class="magazineSection__btn btnTabsHeader">LESEN</button>
+                        </div>
+                        <p class="magazineSection__lower">
+                            Zelt, Schlafsack, Isomatte vergessen: 3 Tage wach! Regenjacke, Mütze,
+                            Handtuch: 3 Tage nass! Zahnbürste, Deo, Socken: 3 Tage baah! Es geht auch anders.
+                            Der Festivalguide Check gegen Alzheimer und Co.
                         </p>
-                        <button class="magazineSection__btn btnTabsHeader">LESEN</button>
                     </div>
-
-                    <div class="magazineSection__box magazineSection__box--B">
-                        <h2 class="magazineSection__Title">Tipps zum Bier kaltstellen</h2>
-                        <p class="magazineSection__text">
-                            Mit diesen Ratschlägen habt ihr auch auf dem Festival
-                            immer kühles Bier. Was will man noch mehr.
-                        </p>
-                        <button class="magazineSection__btn btnTabsHeader">LESEN</button>
-                    </div>
-
-                    <div class="magazineSection__box">
-                        <h2 class="magazineSection__Title">Wo stelle ich mein Zelt auf?</h2>
-                        <p class="magazineSection__text">
-                            Der prefekt Platz auf dem Campingplatz muss zuerst gefunden werden.
-                            Ältere Festivalbesucher können bestätigen:
-                            Die Auswahl des Zeltplatzes ist ein Lernen durch Schmerzen.
-                            Wir möchten euch daher gut vorbereiten um euch ein paar Qualen ersparen zu können.
-                        </p>
-                        <button class="magazineSection__btn btnTabsHeader">LESEN</button>
-                    </div>
-
-
                 </div>
 
                 <button class="secondaryButton btnTabsHeader">MEHR ANZEIGEN</button>
