correct margin for magazine boxes

--- a/src/index.html
+++ b/src/index.html
@@ -392,7 +392,7 @@
 
                     <div class="magazineSection__box">
                         <div class="magazineSection__upper">
-                            <h2 class="magazineSection__Title">Einfach bloss nichts vergessen</h2>
+                            <h2 class="magazineSection__Title">Wie soll ich mich bei Gewitter verhalten?</h2>
                             <button class="magazineSection__btn btnTabsHeader">LESEN</button>
                         </div>
                         <p class="magazineSection__lower">
@@ -403,7 +403,7 @@
                     </div>
                     <div class="magazineSection__box">
                         <div class="magazineSection__upper">
-                            <h2 class="magazineSection__Title">Einfach bloss nichts vergessen</h2>
+                            <h2 class="magazineSection__Title">7 Life Hacks für den Festivalbesuch</h2>
                             <button class="magazineSection__btn btnTabsHeader">LESEN</button>
                         </div>
                         <p class="magazineSection__lower">
@@ -414,7 +414,29 @@
                     </div>
                     <div class="magazineSection__box">
                         <div class="magazineSection__upper">
-                            <h2 class="magazineSection__Title">Einfach bloss nichts vergessen</h2>
+                            <h2 class="magazineSection__Title">Erste Hilfe und die Reiseapotheke</h2>
+                            <button class="magazineSection__btn btnTabsHeader">LESEN</button>
+                        </div>
+                        <p class="magazineSection__lower">
+                            Zelt, Schlafsack, Isomatte vergessen: 3 Tage wach! Regenjacke, Mütze,
+                            Handtuch: 3 Tage nass! Zahnbürste, Deo, Socken: 3 Tage baah! Es geht auch anders.
+                            Der Festivalguide Check gegen Alzheimer und Co.
+                        </p>
+                    </div>
+                    <div class="magazineSection__box">
+                        <div class="magazineSection__upper">
+                            <h2 class="magazineSection__Title">Tipps zum Bier kaltstellen</h2>
+                            <button class="magazineSection__btn btnTabsHeader">LESEN</button>
+                        </div>
+                        <p class="magazineSection__lower">
+                            Zelt, Schlafsack, Isomatte vergessen: 3 Tage wach! Regenjacke, Mütze,
+                            Handtuch: 3 Tage nass! Zahnbürste, Deo, Socken: 3 Tage baah! Es geht auch anders.
+                            Der Festivalguide Check gegen Alzheimer und Co.
+                        </p>
+                    </div>
+                    <div class="magazineSection__box">
+                        <div class="magazineSection__upper">
+                            <h2 class="magazineSection__Title">Wo stelle ich mein Zelt auf?</h2>
                             <button class="magazineSection__btn btnTabsHeader">LESEN</button>
                         </div>
                         <p class="magazineSection__lower">
