header is no fixed

--- a/src/detailsite.html
+++ b/src/detailsite.html
@@ -132,8 +132,8 @@
 
                     <a href="overview-festivals.html"
                        class="titles navSection__title navSection__title--1">Festivals</a>
-                    <a href="#magazinSection" class="titles navSection__title navSection__title--2">Magazin</a>
-                    <a href="#newsSection" class="titles navSection__title navSection__title--3">News</a>
+                    <a href="index.html#magazinSection" class="titles navSection__title navSection__title--2">Magazin</a>
+                    <a href="index.html#newsSection" class="titles navSection__title navSection__title--3">News</a>
 
                 </div>
                 <div class="navSection__BoxB">
@@ -251,7 +251,7 @@
 
         <!-- start with mainSection -->
         <main>
-            <div class="titleSectionDet">
+            <div class="titleSectionDet" id="titleSectionDet">
                 <svg class="titleSectionDet__icon 20px" height="15px" viewBox="0 0 20 15" version="1.1"
                      xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                     <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
@@ -806,8 +806,8 @@
         <footer class="footerSection">
             <ul class="footerSection__box1">
                 <li><a class="footerSection__item footerLabels" href="overview-festivals.html">FESTIVALS</a></li>
-                <li><a class="footerSection__item footerLabels" href="#magazinSection">MAGAZIN</a></li>
-                <li><a class="footerSection__item footerLabels" href="#newsSection">NEWS</a></li>
+                <li><a class="footerSection__item footerLabels" href="index.html#magazineSection">MAGAZIN</a></li>
+                <li><a class="footerSection__item footerLabels" href="index.html#newsSection">NEWS</a></li>
             </ul>
             <ul class="footerSection__box2">
                 <li>
@@ -898,7 +898,7 @@
             </ul>
 
             <div class="footerSection__box3">
-                <a href="#headerSection" class="footerSection__link footerSection__link--position">
+                <a href="#titleSectionDet" class="footerSection__link footerSection__link--position">
                     <span class="footerSection__linkText footerLabels">BACK TO TOP</span>
                     <svg class="footerSection__arrowPic" height="24px" version="1.1" viewBox="0 0 24 24" width="24px"
                          xmlns="http://www.w3.org/2000/svg"
