--- a/src/index.html
+++ b/src/index.html
@@ -250,7 +250,7 @@
 
         <!-- start with mainSection -->
         <main>
-            <div class="titleSection">
+            <div class="titleSection" id="titleSection">
                 <h1 class="titleSection__h1">Auf welche Musik stehst du?</h1>
                 <h3 class="titleSection__h3">Egal auf was du stehst wir haben alles für deinen Musikgeschmack und
                     garantieren dir eine erlebnisreiche Festivalzeit
@@ -373,7 +373,7 @@
                  title="festival picture">
 
             <!--start with magazinSection-->
-            <div class="magazineSection" id="magazinSection">
+            <div class="magazineSection" id="magazineSection">
                 <h1 class="magazineSection__h1">Magazin</h1>
 
                 <div class="magazineSection__container">
@@ -691,7 +691,7 @@
             </ul>
 
             <div class="footerSection__box3">
-                <a href="#headerSection" class="footerSection__link footerSection__link--position">
+                <a href="#titleSection" class="footerSection__link footerSection__link--position">
                     <span class="footerSection__linkText footerLabels">BACK TO TOP</span>
                     <svg class="footerSection__arrowPic" height="24px" version="1.1" viewBox="0 0 24 24" width="24px"
                          xmlns="http://www.w3.org/2000/svg"
