--- a/src/ticket-order.html
+++ b/src/ticket-order.html
@@ -396,7 +396,7 @@
             <!-- end of breadCrumbSection -->
 
             <!-- start with titleSection -->
-            <div class="titleSection ">
+            <div class="titleSection" id="titleSection">
                 <h1 class="titleSection__h1">Tickets für Sur Le Lac</h1>
                 <h3 class="titleSection__h3">Liebe FestivalLovers unsere Festivals sind begehrt,
                     daher sind auch unsere Tickets immer schnell ausverkauft.
@@ -763,7 +763,7 @@
         <footer class="footerSection">
             <ul class="footerSection__box1">
                 <li><a class="footerSection__item footerLabels" href="overview-festivals.html">FESTIVALS</a></li>
-                <li><a class="footerSection__item footerLabels" href="index.html#magazinSection">MAGAZIN</a></li>
+                <li><a class="footerSection__item footerLabels" href="index.html#magazineSection">MAGAZIN</a></li>
                 <li><a class="footerSection__item footerLabels" href="index.html#newsSection">NEWS</a></li>
             </ul>
             <ul class="footerSection__box2">
@@ -855,7 +855,7 @@
             </ul>
 
             <div class="footerSection__box3">
-                <a href="#headerSection" class="footerSection__link footerSection__link--position">
+                <a href="#titleSection" class="footerSection__link footerSection__link--position">
                     <span class="footerSection__linkText footerLabels">BACK TO TOP</span>
                     <svg class="footerSection__arrowPic" height="24px" version="1.1" viewBox="0 0 24 24" width="24px"
                          xmlns="http://www.w3.org/2000/svg"
