implement gulp build

--- a/src/detailsite.html
+++ b/src/detailsite.html
@@ -929,7 +929,8 @@
 
 
 <!-- build:js -->
-<script src="js/main.js"></script>
+<script type="module" src="js/main.js"></script>
+
 <!-- endbuild -->
 
 <script defer
