--- a/src/ticket-order.html
+++ b/src/ticket-order.html
@@ -885,7 +885,8 @@
 </div>
 
 <!-- build:js -->
-<script src="js/main.js"></script>
+<script type="module" src="js/main.js"></script>
+
 <!-- endbuild -->
 </body>
 </html>
