--- a/src/index.html
+++ b/src/index.html
@@ -720,7 +720,7 @@
     </div>
 </div>
 <!-- build:js -->
-<script src="js/main.js"></script>
+<script type="module" src="js/main.js"></script>
 <!-- endbuild -->
 </body>
 </html>
