--- a/src/overview-festivals.html
+++ b/src/overview-festivals.html
@@ -1200,7 +1200,8 @@
 </div>
 
 <!-- build:js -->
-<script src="js/main.js"></script>
+<script type="module" src="js/main.js"></script>
+
 <!-- endbuild -->
 </body>
 </html>
