move bigPic in an own div and changed image props

--- a/src/detailsite.html
+++ b/src/detailsite.html
@@ -268,7 +268,12 @@
                         </g>
                     </g>
                 </svg>
+                <div class="titleSectionDet__bigPic FestivalFont"></div>
+
+                <!--
                 <img class="titleSectionDet__bigPic FestivalFont" src="images/links/BigFestival.png" alt="festival pic">
+                -->
+
                 <div class="titleSectionDet__banner">
                     <p class="titleSectionDet__title FestivalFont">Sur Le Lac <br>ein kleines <br>Fest der Musik</p>
                 </div>
