--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <!-- build:css -->
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <!-- endbuild -->
+    <link rel="shortcut icon" type="image/png" sizes="16x16" href="images/icons/favicon-96x96.png">
 </head>
 <body>
 
