--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,9 @@
                     </div>
                 </div>
                 <span class="headerSection__text" id="headerSection__textMenu">Menu</span>
-                <img alt="" class="headerSection__flLogo" src="images/links/FestivalLovers_Logo.png">
+                <img  class="headerSection__flLogo" id="flLogo" src="images/links/FestivalLovers_Logo.png" alt="FestivalLovers Logo">
+                <img  class="headerSection__flLogoWhite" id="flLogoWhite" src="images/links/FestivalLovers_Logo_weiss.png" alt="FestivalLovers Logo">
+
                 <div class="headerSection__IconLike">
                     <svg height="23px" version="1.1" viewBox="0 0 24 23" width="24px" xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink">
