padding for header

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
                         <div class="rack lower"></div>
                     </div>
                 </div>
-                <span class="headerSection__text" id="headerSection__textMenu">Menu</span>
+                <span class="headerSection__text btnTabsHeader" id="headerSection__textMenu">Menu</span>
                 <img  class="headerSection__flLogo" id="flLogo" src="images/links/FestivalLovers_Logo.png" alt="FestivalLovers Logo">
                 <img  class="headerSection__flLogoWhite" id="flLogoWhite" src="images/links/FestivalLovers_Logo_weiss.png" alt="FestivalLovers Logo">
 
