--- a/src/detailsite.html
+++ b/src/detailsite.html
@@ -136,7 +136,7 @@
 
                     <a href="overview-festivals.html"
                        class="titles navSection__title navSection__title--1">Festivals</a>
-                    <a href="index.html#magazinSection" class="titles navSection__title navSection__title--2">Magazin</a>
+                    <a href="index.html#magazineSection" class="titles navSection__title navSection__title--2">Magazin</a>
                     <a href="index.html#newsSection" class="titles navSection__title navSection__title--3">News</a>
 
                 </div>
