--- a/src/index.html
+++ b/src/index.html
@@ -135,7 +135,7 @@
                 <div class="navSection__titleContainer">
 
                     <a href="overview-festivals.html"class="titles navSection__title navSection__title--1">Festivals</a>
-                    <a href="#magazinSection" class="titles navSection__title navSection__title--2">Magazin</a>
+                    <a href="#magazineSection" class="titles navSection__title navSection__title--2">Magazin</a>
                     <a href="#newsSection" class="titles navSection__title navSection__title--3">News</a>
 
                 </div>
