--- a/src/index.html
+++ b/src/index.html
@@ -30,10 +30,13 @@
                     </div>
                 </div>
                 <span class="headerSection__text btnTabsHeader" id="headerSection__textMenu">Menu</span>
+                <a class="headerSection__flLogoLink" href="http://deepdevdiver.com/">
                 <img  class="headerSection__flLogo" id="flLogo" src="images/links/FestivalLovers_Logo.png" alt="FestivalLovers Logo">
+                </a>
+                <a class="headerSection__flLogoLink headerSection__flLogoLink--white" href="http://deepdevdiver.com/">
                 <img  class="headerSection__flLogoWhite" id="flLogoWhite" src="images/links/FestivalLovers_Logo_weiss.png" alt="FestivalLovers Logo">
-
-                <div class="headerSection__IconLike">
+                </a>
+                <a class="headerSection__IconLike" href="http://deepdevdiver.com/">
                     <svg height="23px" version="1.1" viewBox="0 0 24 23" width="24px" xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink">
                         <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
@@ -49,7 +52,7 @@
                             </g>
                         </g>
                     </svg>
-                </div>
+                </a>
 
             </div>
 
